SharedLibrary/VmMultMsoLib.h


MULT_DLL_API int WINAPI InitDll(unsigned int en_log, unsigned int en_hard_watchdog);
MULT_DLL_API int WINAPI FinishDll();
MULT_DLL_API int WINAPI ScanDevice();
MULT_DLL_API int WINAPI CloseDevice(unsigned int dev_id);
typedef void (CALLBACK *AddCallBack)(void* ppara, unsigned int dev_id);
typedef void (CALLBACK *RemoveCallBack)(void* ppara, unsigned int dev_id);
MULT_DLL_API void WINAPI SetDevNoticeCallBack(void* ppara, AddCallBack addcallback, RemoveCallBack rmvcallback);
MULT_DLL_API int WINAPI GetAvailableDevCount();
MULT_DLL_API int WINAPI SetOscChannelRangemV(unsigned int dev_id, int channel, int minmv, int maxmv);
MULT_DLL_API int WINAPI GetOscSupportSampleRateNum(unsigned int dev_id);
MULT_DLL_API int WINAPI GetOscSupportSampleRates(unsigned int dev_id, unsigned int* sample, int maxnum);
MULT_DLL_API unsigned int WINAPI GetOscSampleRate(unsigned int dev_id);
MULT_DLL_API unsigned int WINAPI SetOscSampleRate(unsigned int dev_id, unsigned int sample);
MULT_DLL_API unsigned int WINAPI GetMemoryLength(unsigned int dev_id);
MULT_DLL_API int WINAPI Capture(unsigned int dev_id, int length, unsigned short capture_channel, char force_length);
typedef void (CALLBACK *DataReadyCallBack)(void* ppara, unsigned int dev_id);
MULT_DLL_API void WINAPI SetDataReadyCallBack(void* ppara, DataReadyCallBack datacallback);
MULT_DLL_API unsigned int WINAPI ReadVoltageDatas(unsigned int dev_id, char channel, double* buffer, unsigned int length);
MULT_DLL_API double WINAPI ReadVoltageDatasTriggerPoint(unsigned int dev_id);
MULT_DLL_API double WINAPI GetVoltageExtremeMin(unsigned int dev_id, char channel);
MULT_DLL_API double WINAPI GetVoltageExtremeMax(unsigned int dev_id, char channel);
MULT_DLL_API int WINAPI IsVoltageDatasOutRange(unsigned int dev_id, char channel);
MULT_DLL_API double WINAPI GetVoltageResolution(unsigned int dev_id, char channel);
MULT_DLL_API int WINAPI IsSupportDDSDevice(unsigned int dev_id);
MULT_DLL_API void WINAPI SetDDSOutMode(unsigned int dev_id, unsigned char channel_index, unsigned int out_mode);
MULT_DLL_API int WINAPI GetDDSSupportBoxingStyle(unsigned int dev_id, int* style);
MULT_DLL_API void WINAPI SetDDSBoxingStyle(unsigned int dev_id, unsigned char channel_index, unsigned int boxing);
MULT_DLL_API void WINAPI SetDDSFreq(unsigned int dev_id, unsigned char channel_index, double freq);
MULT_DLL_API int WINAPI GetDDSCurBoxingAmplitudeMv(unsigned int dev_id, unsigned int boxing);
MULT_DLL_API void WINAPI SetDDSAmplitudeMv(unsigned int dev_id, unsigned char channel_index, int amplitdude);
MULT_DLL_API void WINAPI SetDDSBiasMv(unsigned int dev_id, unsigned char channel_index, int bias);
MULT_DLL_API int WINAPI IsSupportIODevice(unsigned int dev_id);
MULT_DLL_API int WINAPI GetSupportIoNumber(unsigned int dev_id);
typedef void (CALLBACK* IOReadStateCallBack)(void* ppara, unsigned int dev_id, unsigned int state);
MULT_DLL_API void WINAPI SetIOReadStateCallBack(void* ppara, IOReadStateCallBack callback);
MULT_DLL_API void WINAPI IOEnable(unsigned int dev_id, unsigned char channel, unsigned char enable);
MULT_DLL_API void WINAPI SetIOInOut(unsigned int dev_id, unsigned char channel, unsigned char inout);
MULT_DLL_API void WINAPI SetIOOutState(unsigned int dev_id, unsigned char channel, unsigned char state);
#define PARA_CAL_OK 0
MULT_DLL_API int WINAPI ParaCalReset(int para_chn, double* buffer, int buffer_length, 
               int sample, double voltage_resolution, double extreme_min, double extreme_max);
MULT_DLL_API int WINAPI IsMinOk(int para_chn);
MULT_DLL_API double WINAPI GetMin(int para_chn);
MULT_DLL_API int WINAPI IsMaxOk(int para_chn);
MULT_DLL_API double WINAPI GetMax(int para_chn);
MULT_DLL_API int WINAPI IsVppOk(int para_chn);
MULT_DLL_API double WINAPI GetVpp(int para_chn);
MULT_DLL_API int WINAPI IsTopOk(int para_chn);
MULT_DLL_API double WINAPI GetTop(int para_chn);
MULT_DLL_API int WINAPI IsBaseOk(int para_chn);
MULT_DLL_API double WINAPI GetBase(int para_chn);
MULT_DLL_API int WINAPI IsAmplOk(int para_chn);
MULT_DLL_API double WINAPI GetAmpl(int para_chn);
MULT_DLL_API int WINAPI IsRmsOk(int para_chn);
MULT_DLL_API double WINAPI GetRms(int para_chn);
MULT_DLL_API int WINAPI IsFreqOk(int para_chn);
MULT_DLL_API double WINAPI GetFreq(int para_chn);
MULT_DLL_API int WINAPI IsNegativePulseWidthOk(int para_chn);
MULT_DLL_API double WINAPI GetNegativePulseWidth(int para_chn);
MULT_DLL_API int WINAPI CalPhaseDif(int para_chn_a, int para_chn_b, double freq_deviation_threshold, int ref_freq, double force_freq);
MULT_DLL_API double WINAPI GetPhaseDif();